--- a/mscore/mscore/prefsdialog.ui
+++ b/mscore/mscore/prefsdialog.ui
@@ -23,7 +23,7 @@
       <string/>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>6</number>
      </property>
      <widget class="QWidget" name="tab">
       <property name="accessibleName">
@@ -1612,7 +1612,7 @@
             </item>
            </layout>
           </item>
-          <item row="0" column="1">
+          <item row="0" column="2">
            <spacer name="horizontalSpacer_4">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -1624,6 +1624,13 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="0" column="1">
+           <widget class="QCheckBox" name="rememberLastMidiConnections">
+            <property name="text">
+             <string>Remember last connection(s)</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
