--- a/trunk/mscore/mscore/chordproperties.ui
+++ b/trunk/mscore/mscore/chordproperties.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>756</width>
-    <height>417</height>
+    <width>650</width>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -119,6 +119,12 @@
              </item>
              <item row="2" column="1">
               <widget class="QComboBox" name="stemDirection">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <item>
                 <property name="text">
                  <string>auto</string>
@@ -165,13 +171,13 @@
              <item row="3" column="1">
               <widget class="QDoubleSpinBox" name="tuningSpinBox">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
                <property name="suffix">
-                <string extracomment="100 cent = 1 semitone intervall">cent</string>
+                <string extracomment="100 cent = 1 semitone intervall"> cent</string>
                </property>
                <property name="minimum">
                 <double>-200.000000000000000</double>
@@ -199,7 +205,13 @@
               </widget>
              </item>
              <item row="4" column="1">
-              <widget class="QComboBox" name="veloType">
+              <widget class="QComboBox" name="_veloType">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <item>
                 <property name="text">
                  <string extracomment="velocity type">auto</string>
@@ -218,7 +230,14 @@
               </widget>
              </item>
              <item row="6" column="1">
-              <widget class="QSpinBox" name="velocity"/>
+              <widget class="QSpinBox" name="velocity">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+              </widget>
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_5">
@@ -229,6 +248,12 @@
              </item>
              <item row="2" column="1">
               <widget class="QComboBox" name="userMirror">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <item>
                 <property name="text">
                  <string>auto</string>
@@ -250,6 +275,9 @@
            </item>
            <item>
             <layout class="QFormLayout" name="formLayout_2">
+             <property name="fieldGrowthPolicy">
+              <enum>QFormLayout::ExpandingFieldsGrow</enum>
+             </property>
              <property name="verticalSpacing">
               <number>1</number>
              </property>
@@ -261,7 +289,13 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QComboBox" name="ontimeOffsetType">
+              <widget class="QComboBox" name="_ontimeOffsetType">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <item>
                 <property name="text">
                  <string>auto</string>
@@ -288,6 +322,15 @@
              </item>
              <item row="1" column="1">
               <widget class="QSpinBox" name="ontimeOffset">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="suffix">
+                <string> ticks</string>
+               </property>
                <property name="minimum">
                 <number>-10000</number>
                </property>
@@ -304,7 +347,13 @@
               </widget>
              </item>
              <item row="2" column="1">
-              <widget class="QComboBox" name="offtimeOffsetType">
+              <widget class="QComboBox" name="_offtimeOffsetType">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <item>
                 <property name="text">
                  <string>auto</string>
@@ -331,6 +380,15 @@
              </item>
              <item row="3" column="1">
               <widget class="QSpinBox" name="offtimeOffset">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="suffix">
+                <string> ticks</string>
+               </property>
                <property name="minimum">
                 <number>-20000</number>
                </property>
